# DesignPatternsCPP

./: .gitignore
 .github/workflows/: build_and_release.yml
.github/workflows/: build_and_release.yml
Catalog/Factory/easy/code/: CMakeLists.txt
Catalog/Factory/easy/code/tests/: test_concrete_product1.cpp  test_concrete_product2.cpp  test_creator1.cpp  test_creator2.cpp  test_some_operation.cpp
